Add support for display ETM0350G8EDH6 on TBS2
Add new device-tree to support display ETM0350G8EDH6 on module tbs2.

--- a/arch/arm64/configs/fsimx8mm_defconfig
+++ b/arch/arm64/configs/fsimx8mm_defconfig
@@ -255,6 +255,7 @@ CONFIG_KEYBOARD_SNVS_PWRKEY=y
 CONFIG_INPUT_TOUCHSCREEN=y
 CONFIG_TOUCHSCREEN_ATMEL_MXT=m
 CONFIG_TOUCHSCREEN_GOODIX=y
+CONFIG_TOUCHSCREEN_EDT_FT5X06=y
 CONFIG_TOUCHSCREEN_FT5X06=y
 CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_I2C=m
 CONFIG_INPUT_MISC=y
@@ -356,6 +357,7 @@ CONFIG_DRM_SII902X=m
 CONFIG_DRM_PANEL_NOVATEK_NT35521=y
 CONFIG_DRM_NXP_SEIKO_43WVFIG=y
 CONFIG_DRM_TOSHIBA_TC358764=y
+CONFIG_DRM_LONTIUM_LT9211=y
 CONFIG_DRM_I2C_ADV7511=y
 CONFIG_DRM_NWL_MIPI_DSI=y
 CONFIG_DRM_CDNS_HDMI_CEC=y
