--- a/arch/arm/boot/dts/Makefile
+++ b/arch/arm/boot/dts/Makefile
@@ -672,6 +672,7 @@ dtb-$(CONFIG_SOC_IMX6UL) += \
 	imx6ull-14x14-evk-gpmi-weim.dtb \
 	efusa7ull.dtb \
 	cube2.0ull.dtb \
+	picocoma7ull.dtb \
 	picocoremx6ull.dtb \
 	imx6ull-9x9-evk.dtb \
 	imx6ull-9x9-evk-ldo.dtb \
