--- a/arch/arm/configs/fsimx6ul_defconfig
+++ b/arch/arm/configs/fsimx6ul_defconfig
@@ -297,6 +297,7 @@ CONFIG_TOUCHSCREEN_ILI210X=y
 CONFIG_TOUCHSCREEN_FT5X06=y
 CONFIG_TOUCHSCREEN_ST1633I=y
 CONFIG_TOUCHSCREEN_SX8654=y
+CONFIG_TOUCHSCREEN_IMX6UL_TSC=y
 # CONFIG_LEGACY_PTYS is not set
 # CONFIG_DEVKMEM is not set
 CONFIG_SERIAL_IMX=y
