Improve architecture fsimx6 PCIe setup
Activate by default the PCIe interface on all fsimx6 boards. By default
there are hw issues on armstone boards but on efusA9 it works without
any issue.

--- a/arch/arm/boot/dts/armstonea9r2q.dts
+++ b/arch/arm/boot/dts/armstonea9r2q.dts
@@ -233,6 +233,11 @@ wvga {					\
 #define CONFIG_ARMSTONEA9R2_EMMC
 
 /* PCIe */
+/* On PCIe wire PCIECLKN/P there are some missing terminating resistor
+ * therefore PCIe can´t get a link. These can be fixed if either the
+ * corresponding adapter have these resistors or there must be a redesign
+ * for armstone. The resistors can be found on efusA9.
+ */
 //#define CONFIG_ARMSTONEA9R2_PCIE
 
 /* I2C */
