--- a/arch/arm/boot/dts/armstonea9q.dts
+++ b/arch/arm/boot/dts/armstonea9q.dts
@@ -248,6 +248,11 @@ wvga {					\
 #define CONFIG_ARMSTONEA9_SD_A
 
 /* PCIe */
+/* On PCIe wire PCIECLKN/P there are some missing terminating resistor
+ * therefore PCIe can´t get a link. These can be fixed if either the
+ * corresponding adapter have these resistors or there must be a redesign
+ * for armstone. The resistors can be found on efusA9.
+ */
 //#define CONFIG_ARMSTONEA9_PCIE
 
 /* SATA */
