--- a/arch/arm/boot/dts/armstonea9r2dl.dts
+++ b/arch/arm/boot/dts/armstonea9r2dl.dts
@@ -218,6 +218,11 @@ wvga {					\
 #define CONFIG_ARMSTONEA9R2_WLAN
 
 /* PCIe */
+/* On PCIe wire PCIECLKN/P there are some missing terminating resistor
+ * therefore PCIe can´t get a link. These can be fixed if either the
+ * corresponding adapter have these resistors or there must be a redesign
+ * for armstone. The resistors can be found on efusA9.
+ */
 //#define CONFIG_ARMSTONEA9R2_PCIE
 
 /* EMMC */
