--- a/arch/arm64/configs/fsimx8mm_defconfig
+++ b/arch/arm64/configs/fsimx8mm_defconfig
@@ -331,6 +331,7 @@ CONFIG_INPUT_TOUCHSCREEN=y
 CONFIG_TOUCHSCREEN_ATMEL_MXT=m
 CONFIG_TOUCHSCREEN_GOODIX=y
 CONFIG_TOUCHSCREEN_FT5X06=y
+CONFIG_TOUCHSCREEN_TSC2004=y
 CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_I2C=m
 CONFIG_TOUCHSCREEN_FTS=y
 CONFIG_TOUCHSCREEN_FTS_DIRECTORY="focaltech_touch"
@@ -433,6 +434,7 @@ CONFIG_DRM_SII902X=m
 CONFIG_DRM_PANEL_NOVATEK_NT35521=y
 CONFIG_DRM_NXP_SEIKO_43WVFIG=y
 CONFIG_DRM_TOSHIBA_FUS_TC358775=y
+CONFIG_DRM_LONTIUM_LT9211=y
 CONFIG_DRM_I2C_ADV7511=y
 CONFIG_DRM_NWL_MIPI_DSI=y
 CONFIG_DRM_CDNS_HDMI_CEC=y
