--- a/arch/arm64/boot/dts/F+S/picocoremx8mm-lpddr4-lcdif-rf3500d-ayw-mng1.dts
+++ b/arch/arm64/boot/dts/F+S/picocoremx8mm-lpddr4-lcdif-rf3500d-ayw-mng1.dts
@@ -6,7 +6,7 @@
 * published by the Free Software Foundation.
 */
 
-#include "picocoremx8mm.dts"
+#include "picocoremx8mm-lpddr4.dts"
 
 &mipi_dsi {
 	status = "okay";
