--- a/arch/arm64/boot/dts/F+S/picocoremx8mm-lpddr4-lcdif-tc358764-j070wvtc0211.dts
+++ b/arch/arm64/boot/dts/F+S/picocoremx8mm-lpddr4-lcdif-tc358764-j070wvtc0211.dts
@@ -8,7 +8,7 @@
 
 #define CONFIG_PICOCOREMX8MM_MIPI_DSI_LVDS
 #define CONFIG_PICOCOREMX8MM_INVERTED_XY
-#include "picocoremx8mm.dts"
+#include "picocoremx8mm-lpddr4.dts"
 
 &lcdif {
 	status = "okay";
