--- a/arch/arm64/boot/dts/F+S/Makefile
+++ b/arch/arm64/boot/dts/F+S/Makefile
@@ -8,37 +8,37 @@ dtb-$(CONFIG_ARCH_MXC) += armstonemx8m.dtb \
 			  armstonemx8m-lcdif-sn65dsi84-j070wvtc0211.dtb \
 			  armstonemx8m-lcdif-sn65dsi84-g185han01.dtb \
 			  armstonemx8m-dcss-hdmi.dtb
-dtb-$(CONFIG_ARCH_MXC) += picocoremx8mm.dtb \
-			  picocoremx8mm-lcdif-tc358764-g070y2-l01.dtb \
-			  picocoremx8mm-lcdif-tc358764-j070wvtc0211.dtb \
-			  picocoremx8mm-lcdif-g050tan01.dtb \
-			  picocoremx8mm-lcdif-rf3500d-ayw-mng1.dtb \
-			  picocoremx8mm-lcdif-adp-mipi2lvds1-j070wvtc0211-single-display.dtb \
-			  picocoremx8mm-lcdif-adp-mipi2lvds1-g133han01.dtb \
-			  picocoremx8mm-lcdif-adp-mipi2mipi1-ee0350et-2cp.dtb \
-			  picocoremx8mm-lcdif-adp-mipi2rgb.dtb \
+dtb-$(CONFIG_ARCH_MXC) += picocoremx8mm-lpddr4.dtb \
+			  picocoremx8mm-lpddr4-lcdif-tc358764-g070y2-l01.dtb \
+			  picocoremx8mm-lpddr4-lcdif-tc358764-j070wvtc0211.dtb \
+			  picocoremx8mm-lpddr4-lcdif-g050tan01.dtb \
+			  picocoremx8mm-lpddr4-lcdif-rf3500d-ayw-mng1.dtb \
+			  picocoremx8mm-lpddr4-lcdif-adp-mipi2lvds1-j070wvtc0211-single-display.dtb \
+			  picocoremx8mm-lpddr4-lcdif-adp-mipi2lvds1-g133han01.dtb \
+			  picocoremx8mm-lpddr4-lcdif-adp-mipi2mipi1-ee0350et-2cp.dtb \
+			  picocoremx8mm-lpddr4-lcdif-adp-mipi2rgb.dtb \
 			  tbs2.dtb \
-			  picocoremx8mx.dtb \
-			  picocoremx8mx-lcdif-tc358775-g133han01.dtb \
-			  picocoremx8mx-lcdif-tc358775-j070wvtc0211.dtb \
-			  picocoremx8mx-lcdif-adp-mipi2lvds1-j070wvtc0211-single-display.dtb \
-			  picocoremx8mx-lcdif-adp-mipi2lvds1-g133han01.dtb \
-			  picocoremx8mx-lcdif-adp-mipi2mipi1-ee0350et-2cp.dtb \
-			  picocoremx8mx-lcdif-adp-mipi2rgb.dtb
+			  picocoremx8mm-ddr3l.dtb \
+			  picocoremx8mm-ddr3l-lcdif-tc358775-g133han01.dtb \
+			  picocoremx8mm-ddr3l-lcdif-tc358775-j070wvtc0211.dtb \
+			  picocoremx8mm-ddr3l-lcdif-adp-mipi2lvds1-j070wvtc0211-single-display.dtb \
+			  picocoremx8mm-ddr3l-lcdif-adp-mipi2lvds1-g133han01.dtb \
+			  picocoremx8mm-ddr3l-lcdif-adp-mipi2mipi1-ee0350et-2cp.dtb \
+			  picocoremx8mm-ddr3l-lcdif-adp-mipi2rgb.dtb
 
 dtb-$(CONFIG_ARCH_MXC) += efusmx8x.dtb
-dtb-$(CONFIG_ARCH_MXC) += picocoremx8mn.dtb \
-			  picocoremx8mn-lcdif-tc358775-g070y2-l01.dtb \
-			  picocoremx8mn-lcdif-tc358775-j070wvtc0211.dtb \
-			  picocoremx8mn-lcdif-g050tan01.dtb \
-			  picocoremx8mn-lcdif-adp-mipi2lvds1-j070wvtc0211-single-display.dtb \
-			  picocoremx8mn-lcdif-adp-mipi2lvds1-g133han01.dtb \
-			  picocoremx8mn-lcdif-adp-mipi2mipi1-ee0350et-2cp.dtb \
-			  picocoremx8mx-nano.dtb \
-			  picocoremx8mx-nano-lcdif-tc358775-g133han01.dtb \
-			  picocoremx8mx-nano-lcdif-tc358775-j070wvtc0211.dtb \
-			  picocoremx8mx-nano-lcdif-adp-mipi2lvds1-g133han01.dtb \
-			  picocoremx8mx-nano-lcdif-adp-mipi2mipi1-ee0350et-2cp.dtb
+dtb-$(CONFIG_ARCH_MXC) += picocoremx8mn-lpddr4.dtb \
+			  picocoremx8mn-lpddr4-lcdif-tc358775-g070y2-l01.dtb \
+			  picocoremx8mn-lpddr4-lcdif-tc358775-j070wvtc0211.dtb \
+			  picocoremx8mn-lpddr4-lcdif-g050tan01.dtb \
+			  picocoremx8mn-lpddr4-lcdif-adp-mipi2lvds1-j070wvtc0211-single-display.dtb \
+			  picocoremx8mn-lpddr4-lcdif-adp-mipi2lvds1-g133han01.dtb \
+			  picocoremx8mn-lpddr4-lcdif-adp-mipi2mipi1-ee0350et-2cp.dtb \
+			  picocoremx8mn-ddr3l.dtb \
+			  picocoremx8mn-ddr3l-lcdif-tc358775-g133han01.dtb \
+			  picocoremx8mn-ddr3l-lcdif-tc358775-j070wvtc0211.dtb \
+			  picocoremx8mn-ddr3l-lcdif-adp-mipi2lvds1-g133han01.dtb \
+			  picocoremx8mn-ddr3l-lcdif-adp-mipi2mipi1-ee0350et-2cp.dtb
 dtb-$(CONFIG_ARCH_MXC) += picocoremx8mp.dtb \
 			  picocoremx8mp-lcdif-adp-mipi2lvds1-j070wvtc0211-single-display.dtb \
 			  picocoremx8mp-lcdif-adp-mipi2mipi1-ee0350et-2cp.dtb \
