--- a/arch/arm64/boot/dts/F+S/picocoremx8mm-ddr3l-lcdif-adp-mipi2lvds1-g133han01.dts
+++ b/arch/arm64/boot/dts/F+S/picocoremx8mm-ddr3l-lcdif-adp-mipi2lvds1-g133han01.dts
@@ -1,13 +1,13 @@
 /*
- * Copyright (C) 2021 F&S Elektronik Systeme GmbH
+ * Copyright (C) 2019 F&S Elektronik Systeme GmbH
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License version 2 as
  * published by the Free Software Foundation.
  */
 
-#define CONFIG_PICOCOREMX8MX_NANO_MIPI_DSI
-#include "picocoremx8mx-nano.dts"
+#define CONFIG_PICOCOREMX8MX_MIPI_DSI
+#include "picocoremx8mm-ddr3l.dts"
 
 / {
 	backlight_ldb {
