--- a/arch/arm64/boot/dts/F+S/picocoremx8mm-lpddr4-lcdif-adp-mipi2lvds1-g133han01.dts
+++ b/arch/arm64/boot/dts/F+S/picocoremx8mm-lpddr4-lcdif-adp-mipi2lvds1-g133han01.dts
@@ -1,15 +1,15 @@
 /*
- * Copyright (C) 2021 F&S Elektronik Systeme GmbH
+ * Copyright (C) 2019 F&S Elektronik Systeme GmbH
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License version 2 as
  * published by the Free Software Foundation.
  */
 
-#define CONFIG_PICOCOREMX8MN_MIPI_DSI
-#include "picocoremx8mn.dts"
+#define CONFIG_PICOCOREMX8MM_MIPI_DSI
+#include "picocoremx8mm-lpddr4.dts"
 
-#define CONFIG_PICOCOREMX8MN_INVERTED_XY
+#define CONFIG_PICOCOREMX8MM_INVERTED_XY
 / {
 	backlight_ldb {
 		pwms = <&pwm2 0 2000000 0>;
