--- a/arch/arm64/boot/dts/F+S/picocoremx8mm-lpddr4-lcdif-adp-mipi2mipi1-ee0350et-2cp.dts
+++ b/arch/arm64/boot/dts/F+S/picocoremx8mm-lpddr4-lcdif-adp-mipi2mipi1-ee0350et-2cp.dts
@@ -1,14 +1,14 @@
 /*
-* Copyright (C) 2021 F&S Elektronik Systeme GmbH
+* Copyright (C) 2019 F&S Elektronik Systeme GmbH
 *
 * This program is free software; you can redistribute it and/or modify
 * it under the terms of the GNU General Public License version 2 as
 * published by the Free Software Foundation.
 */
 
-#define CONFIG_PICOCOREMX8MX_NANO_MIPI_DSI
+#define CONFIG_PICOCOREMX8MM_MIPI_DSI
 #include <dt-bindings/interrupt-controller/irq.h>
-#include "picocoremx8mx-nano.dts"
+#include "picocoremx8mm-lpddr4.dts"
 
 / {
 	regulators {
@@ -60,8 +60,8 @@
 		compatible = "maxim,max7315";
 		reg = <0x20>;
 		/* interrupt not yet supported */
-		//interrupt-parent = <&gpio5>;
-		//interrupts = <2 IRQ_TYPE_LEVEL_LOW>;
+		//interrupt-parent = <&gpio4>;
+		//interrupts = <31 IRQ_TYPE_LEVEL_LOW>;
 		//#interrupt-cells = <2>;
 		//interrupt-controller;
 		gpio-controller;
@@ -76,8 +76,14 @@
 	mxt336u@4a {
 		compatible = "atmel,maxtouch";
 		reg = <0x4a>;
-		interrupt-parent = <&gpio5>;
-		interrupts = <2 IRQ_TYPE_EDGE_FALLING>;
+#if CONFIG_PICOCOREMX8MM_BOARD_REVISION >= 130
+		interrupt-parent = <&gpio1>;
+		interrupts = <0 IRQ_TYPE_EDGE_FALLING>;
+
+#else
+		interrupt-parent = <&gpio4>;
+		interrupts = <31 IRQ_TYPE_EDGE_FALLING>;
+#endif
 		atmel,cfg_name = "atmel/mxt336u-gloves.cfg";
 		reset-gpios = <&max7315 6 GPIO_ACTIVE_LOW>;
 	};
