--- a/arch/arm64/boot/dts/F+S/picocoremx8mn-ddr3l-lcdif-adp-mipi2mipi1-ee0350et-2cp.dts
+++ b/arch/arm64/boot/dts/F+S/picocoremx8mn-ddr3l-lcdif-adp-mipi2mipi1-ee0350et-2cp.dts
@@ -1,14 +1,14 @@
 /*
-* Copyright (C) 2019 F&S Elektronik Systeme GmbH
+* Copyright (C) 2021 F&S Elektronik Systeme GmbH
 *
 * This program is free software; you can redistribute it and/or modify
 * it under the terms of the GNU General Public License version 2 as
 * published by the Free Software Foundation.
 */
 
-#define CONFIG_PICOCOREMX8MX_MIPI_DSI
+#define CONFIG_PICOCOREMX8MX_NANO_MIPI_DSI
 #include <dt-bindings/interrupt-controller/irq.h>
-#include "picocoremx8mx.dts"
+#include "picocoremx8mn-ddr3l.dts"
 
 / {
 	regulators {
