--- a/arch/arm64/boot/dts/F+S/picocoremx8mn-lpddr4-lcdif-g050tan01.dts
+++ b/arch/arm64/boot/dts/F+S/picocoremx8mn-lpddr4-lcdif-g050tan01.dts
@@ -7,7 +7,7 @@
 */
 
 #define CONFIG_PICOCOREMX8MN_MIPI_DSI
-#include "picocoremx8mn.dts"
+#include "picocoremx8mn-lpddr4.dts"
 
 &mipi_dsi {
 	status = "okay";
