--- a/arch/arm64/boot/dts/F+S/picocoremx8mn-lpddr4-lcdif-tc358775-j070wvtc0211.dts
+++ b/arch/arm64/boot/dts/F+S/picocoremx8mn-lpddr4-lcdif-tc358775-j070wvtc0211.dts
@@ -1,34 +1,37 @@
 /*
- * Copyright (C) 2020 F&S Elektronik Systeme GmbH
+ * Copyright (C) 2021 F&S Elektronik Systeme GmbH
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License version 2 as
  * published by the Free Software Foundation.
  */
 
-#define CONFIG_PICOCOREMX8MX_MIPI_DSI_LVDS
-#define CONFIG_PICOCOREMX8MX_INVERTED_XY
-#include "picocoremx8mx.dts"
+#define CONFIG_PICOCOREMX8MN_MIPI_DSI_LVDS
+#define CONFIG_PICOCOREMX8MN_INVERTED_XY
+#include "picocoremx8mn-lpddr4.dts"
 
 &lcdif {
 	status = "okay";
-	/* important to overwrite max-res otherwise DRM lcdif will fail
-	 * to find a suitable connector
+	/* important to overwrite max-res otherwise DRM lcdif will fail to
+	 * find a suitable connector
 	 */
 	max-res = <4096>, <4096>;
 };
 
 &mipi_dsi {
 	status = "okay";
+
 	panel@0{
 		status = "okay";
 		compatible = "toshiba,fus-tc358775";
 		reg = <0>;
 		pinctrl-names = "default";
 		pinctrl-0 = <&pinctrl_mipi_dsi_lvds_en>;
-		clocks = <&clk IMX8MM_CLK_CLKO2>;
-		reset-gpios = <&gpio1 8 GPIO_ACTIVE_HIGH>;
-		stby-gpios  = <&gpio1 4 GPIO_ACTIVE_HIGH>;
+#if CONFIG_PICOCOREMX8MN_BOARD_REVISION >= 130
+		reset-gpios = <&gpio4 31 GPIO_ACTIVE_HIGH>;
+#else
+		reset-gpios = <&gpio1 13 GPIO_ACTIVE_HIGH>;
+#endif
 		vddc-supply = <&reg_vref_1v2>;
 		vddio-supply = <&reg_vref_1v8>;
 		vddlvds-supply = <&reg_vref_3v3>;
@@ -66,8 +69,9 @@
 			0x03200120 0x1A0014 0xD20320 0x170001
 			0x1501E0 0x1 0x44802D 0x4802D 0x4
 			/* color mapping settings	*/
-			0x3020100 0x8050704 0xF0E0A09 0x100D0C0B 0x12111716
-			0x1B151413 0x61A1918 0x00000031
+			0x3020100 0x8050704 0xF0E0A09 0x100D0C0B
+			0x12111716 0x1B151413 0x61A1918
+			0x00000031
 		>;
 
 		display-timings {
@@ -93,18 +97,28 @@
 	focaltech@38 {
 		compatible = "focaltech,fts";
 		reg = <0x38>;
-		pinctrl-names = "default";
-		pinctrl-0 = <&pinctrl_touch>;
-		interrupt-parent = <&gpio5>;
-		interrupts = <2 IRQ_TYPE_EDGE_FALLING>;
-		focaltech,irq-gpio = <&gpio5 2 IRQ_TYPE_EDGE_FALLING>;
-#ifdef CONFIG_PICOCOREMX8MX_INVERTED_XY
+#if CONFIG_PICOCOREMX8MN_BOARD_REVISION >= 130
+		interrupt-parent = <&gpio1>;
+		interrupts = <0 IRQ_TYPE_EDGE_FALLING>;
+		focaltech,irq-gpio = <&gpio1 0 IRQ_TYPE_EDGE_FALLING>;
+#else
+		interrupt-parent = <&gpio4>;
+		interrupts = <31 IRQ_TYPE_EDGE_FALLING>;
+		focaltech,irq-gpio = <&gpio4 31 IRQ_TYPE_EDGE_FALLING>;
+#endif
+#ifdef CONFIG_PICOCOREMX8MN_INVERTED_XY
 		focaltech,touchscreen-inverted-x;
 		focaltech,touchscreen-inverted-y;
 #endif
 
-#if CONFIG_PICOCOREBBDSI_BOARD_REVISION > 120
+#if CONFIG_PICOCOREBBDSI_BOARD_REVISION >= 130
+#if CONFIG_PICOCOREMX8MN_BOARD_REVISION >= 130
 		focaltech,reset-gpio = <&gpio1 13 GPIO_ACTIVE_LOW>;
+#else
+		focaltech,reset-gpio = <&gpio1 0 GPIO_ACTIVE_LOW>;
+#endif
+#else
+		focaltech,reset-gpio = <&gpio1 10 GPIO_ACTIVE_LOW>;
 #endif
 		focaltech,num-max-touches = <10>;
 		focaltech,display-coords = <0 0 800 480>;
@@ -118,12 +132,4 @@
 				     199 207 215 223 231 239 247 255>;
 		default-brightness-level = <14>;
 	};
-};
-
-&iomuxc {
-		pinctrl_touch: touch_grp {
-			fsl,pins = <
-				MX8MM_IOMUXC_GPIO1_IO13_GPIO1_IO13	0x00104
-			>;
-		};
 };
