Use simple-panel driver for tc358775 with j070wvtc0211
Attach functions are used to create a DRM chain:

        --> ENCODER --> [X BRIDGES] --> CONNECTOR / PANEL
      /
CRTC --> ENCODER --> [X BRIDGES] --> CONNECTOR / PANEL
      \
        --> ENCODER --> [X BRIDGES] --> CONNECTOR / PANEL

In our case:
CRTC: drivers/gpu/imx/lcdif/lcdif-common.c
ENCODER: drivers/gpu/drm/imx/sec_mipi_dsim-imx.c
BRIDGE0: drivers/gpu/drm/bridge/sec_dsim.c (not in device tree, just a
helper bridge for encoder)
BRIDGE1: drivers/gpu/drm/bridge/tc358775.c
PANEL: drivers/gpu/drm/panel/panel-simple.c ("jhd,j070wvtc1601w")

Adding other panels:
- Add entry in panel-simple with default timings
- Add the panel node to the end of the chain in the device tree
(port 0 = input, port 1 = output)
- Adjust length of vsync and hsync (hsync should be even for tc358775)
- Slowly increase the frequency

--- a/arch/arm64/configs/fsimx8mm_defconfig
+++ b/arch/arm64/configs/fsimx8mm_defconfig
@@ -434,6 +434,7 @@ CONFIG_DRM_SII902X=m
 CONFIG_DRM_PANEL_NOVATEK_NT35521=y
 CONFIG_DRM_NXP_SEIKO_43WVFIG=y
 CONFIG_DRM_TOSHIBA_FUS_TC358775=y
+CONFIG_DRM_TOSHIBA_TC358775=y
 CONFIG_DRM_LONTIUM_LT9211=y
 CONFIG_DRM_I2C_ADV7511=y
 CONFIG_DRM_NWL_MIPI_DSI=y
