--- a/arch/arm64/configs/fsimx8mn_defconfig
+++ b/arch/arm64/configs/fsimx8mn_defconfig
@@ -433,6 +433,7 @@ CONFIG_DRM_SII902X=m
 CONFIG_DRM_PANEL_NOVATEK_NT35521=y
 CONFIG_DRM_NXP_SEIKO_43WVFIG=y
 CONFIG_DRM_TOSHIBA_FUS_TC358775=y
+CONFIG_DRM_TOSHIBA_TC358775=y
 CONFIG_DRM_I2C_ADV7511=y
 CONFIG_DRM_NWL_MIPI_DSI=y
 CONFIG_DRM_CDNS_HDMI_CEC=y
