fsimx8mp: Improve device tree for mipi-dsi panel ee0350et-2cp
fsimx8mp: Improve evice tree for mipi-dsi panel ee0350et-2cp
- Correct define to enable mipi-dsi
- Disable lvds support because bootloader uses feature settings
  to enable or disable display
- in ldb node fsl,data-mapping must be defined because
  of problems with ldb driver

--- a/arch/arm64/boot/dts/F+S/picocoremx8mp-lcdif-adp-mipi2mipi1-ee0350et-2cp.dts
+++ b/arch/arm64/boot/dts/F+S/picocoremx8mp-lcdif-adp-mipi2mipi1-ee0350et-2cp.dts
@@ -6,7 +6,7 @@
 * published by the Free Software Foundation.
 */
 
-#define CONFIG_PICOCOREMX8MM_MIPI_DSI
+#define CONFIG_PICOCOREMX8MP_MIPI_DSI
 #include "picocoremx8mp.dts"
 
 #define CONFIG_ADP_MIPI2MIPI1_BOARD_REVISION	120
@@ -55,7 +55,29 @@
 };
 
 &lcdif2 {
-	status = "okay";
+	status = "disabled";
+};
+
+&ldb {
+	status = "disabled";
+
+	/* DSI_A */
+	lvds-channel@0 {
+		fsl,data-mapping = "spwg";
+		fsl,data-width = <24>;
+		status = "disabled";
+	};
+
+	/* DSI_B */
+	lvds-channel@1 {
+		fsl,data-mapping = "spwg";
+		fsl,data-width = <24>;
+		status = "disabled";
+	};
+};
+
+&ldb_phy {
+	status = "disabled";
 };
 
 &lcdif3 {
