Fix qblissa9r2q SoC compatible in device tree
The qblissa9r2q.dts had the wrong SoC compatible entry (qblissa9r2dl).
This lead to a kernel hang when booting the GPU, because the imx6dl has
a different GPU unit than the imx6q.

--- a/arch/arm/boot/dts/qblissa9r2q.dts
+++ b/arch/arm/boot/dts/qblissa9r2q.dts
@@ -300,7 +300,7 @@ wvga {					\
 
 / {
 	model = "F&S i.MX6 Dual/Quad QBlissA9r2";
-	compatible = "fsl,imx6dl-qblissa9r2", "fsl,imx6dl";
+	compatible = "fsl,imx6q-qblissa9r2", "fsl,imx6q";
 };
 
 &bdinfo {
