Fix imx6 device tree pathes for backwards compatibility
Add the leading zeros of some device tree paths again for backwards
compatibility with uboots < fsimx6-B2021.10.
Older Uboots use the absolute path for making adaptions at runtime to
the Linux device tree, which leads to incompatibility, when the Linux
device tree paths are changed (like removing leading zeros).
In future releases we will use aliases instead of absolute paths to
avoid this issue.

This commit may be reversed as soon as the backwards compatibility is
not needed anymore.

--- a/arch/arm/boot/dts/imx6qp.dtsi
+++ b/arch/arm/boot/dts/imx6qp.dtsi
@@ -26,8 +26,11 @@
 			reg = <0x00960000 0x20000>;
 			clocks = <&clks IMX6QDL_CLK_OCRAM>;
 		};
-
-		aips-bus@2100000 {
+		/* F&S Hotfix: Add the leading zeros of the aips-bus@ again for backwards
+		 * compatibility with uboots < fsimx6-B2021.10. This may be reversed
+		 * as soon as the backwards compatibility is not needed anymore.
+		 */
+		aips-bus@02100000 {
 			pre1: pre@21c8000 {
 				compatible = "fsl,imx6q-pre";
 				reg = <0x021c8000 0x1000>;
