--- a/arch/arm/boot/dts/imx6dl.dtsi
+++ b/arch/arm/boot/dts/imx6dl.dtsi
@@ -168,8 +168,11 @@
 				clock-names = "epdc_axi", "epdc_pix";
 			};
 		};
-
-		aips2: aips-bus@2100000 {
+		/* F&S Hotfix: Add the leading zeros of the aips-bus@ again for backwards
+		 * compatibility with uboots < fsimx6-B2021.10. This may be reversed
+		 * as soon as the backwards compatibility is not needed anymore.
+		 */
+		aips2: aips-bus@02100000 {
 			mipi_dsi: mipi@21e0000 {
 				compatible = "fsl,imx6dl-mipi-dsi";
 				reg = <0x21e0000 0x4000>;
