--- a/arch/arm/boot/dts/imx6q.dtsi
+++ b/arch/arm/boot/dts/imx6q.dtsi
@@ -217,8 +217,11 @@
 				compatible = "fsl,imx6q-iomuxc";
 			};
 		};
-
-		aips-bus@2100000 { /* AIPS2 */
+		/* F&S Hotfix: Add the leading zeros of the aips-bus@ again for backwards
+		 * compatibility with uboots < fsimx6-B2021.10. This may be reversed
+		 * as soon as the backwards compatibility is not needed anymore.
+		 */
+		aips-bus@02100000 { /* AIPS2 */
 			mipi_dsi: mipi@21e0000 {
 				compatible = "fsl,imx6q-mipi-dsi";
 				reg = <0x21e0000 0x4000>;
