--- a/arch/arm/boot/dts/imx6qdl.dtsi
+++ b/arch/arm/boot/dts/imx6qdl.dtsi
@@ -174,8 +174,11 @@
 			dma-channels = <4>;
 			clocks = <&clks IMX6QDL_CLK_APBH_DMA>;
 		};
-
-		gpmi: gpmi-nand@112000 {
+		/* F&S Hotfix: Add the leading zeros of the gpmi-nand@ again for backwards
+		 * compatibility with uboots < fsimx6-B2021.10. This may be reversed
+		 * as soon as the backwards compatibility is not needed anymore.
+		 */
+		gpmi: gpmi-nand@00112000 {
 			compatible = "fsl,imx6q-gpmi-nand";
 			reg = <0x00112000 0x2000>, <0x00114000 0x2000>;
 			reg-names = "gpmi-nand", "bch";
@@ -1053,8 +1056,11 @@
 				fsl,sdma-ram-script-name = "imx/sdma/sdma-imx6q.bin";
 			};
 		};
-
-		aips-bus@2100000 { /* AIPS2 */
+		/* F&S Hotfix: Add the leading zeros of the aips-bus@ again for backwards
+		 * compatibility with uboots < fsimx6-B2021.10. This may be reversed
+		 * as soon as the backwards compatibility is not needed anymore.
+		 */
+		aips-bus@02100000 { /* AIPS2 */
 			compatible = "fsl,aips-bus", "simple-bus";
 			#address-cells = <1>;
 			#size-cells = <1>;
@@ -1153,8 +1159,11 @@
 				reg = <0x02184800 0x200>;
 				clocks = <&clks IMX6QDL_CLK_USBOH3>;
 			};
-
-			fec: ethernet@2188000 {
+			/* F&S Hotfix: Add the leading zeros of the ethernet@ again for backwards
+			 * compatibility with uboots < fsimx6-B2021.10. This may be reversed
+			 * as soon as the backwards compatibility is not needed anymore.
+			 */
+			fec: ethernet@02188000 {
 				compatible = "fsl,imx6q-fec";
 				reg = <0x02188000 0x4000>;
 				interrupt-names = "int0", "pps";
