Fix qblissa9dl SoC compatible in device tree
The qblissa9dl.dts had the wrong SoC compatible entry (qblissa9q).

--- a/arch/arm/boot/dts/qblissa9dl.dts
+++ b/arch/arm/boot/dts/qblissa9dl.dts
@@ -275,7 +275,7 @@ wvga {					\
 
 / {
 	model = "F&S i.MX6 Dual/Quad QBlissA9";
-	compatible = "fsl,imx6q-qblissa9", "fsl,imx6q";
+	compatible = "fsl,imx6dl-qblissa9", "fsl,imx6dl";
 };
 
 &bdinfo {
