--- a/arch/arm64/boot/dts/F+S/picocoremx8mm-ddr3l-lcdif-adp-mipi2rgb.dts
+++ b/arch/arm64/boot/dts/F+S/picocoremx8mm-ddr3l-lcdif-adp-mipi2rgb.dts
@@ -20,19 +20,22 @@
 			regulator-max-microvolt = <3300000>;
 			enable-active-high;
 		};
+	};
 
-		/* LCD power on voltage */
-		reg_vlcd_adp: vlcd_adp {
-			compatible = "regulator-fixed";
-			regulator-name = "VLCD-ADP";
-			gpio = <&pca963x 4 0>;
-			regulator-min-microvolt = <3300000>;
-			regulator-max-microvolt = <3300000>;
-			enable-active-high;
+	/* Simple panel driver */
+	panel: panel {
+		compatible = "edt,et070080dh6";
+		backlight = <&backlight_lcd>;
+		power-supply = <&reg_vlcd>;
+
+		port@0 {
+			panel_from_rgb: endpoint {
+				remote-endpoint = <&rgb_to_panel>;
+			};
 		};
 	};
 
-	backlight_lcd {
+	backlight_lcd: backlight_lcd {
 		compatible = "pwm-backlight";
 		pwms = <&pca963x 1 640000 0>;
 		power-supply = <&reg_lcd_bl>;
@@ -44,70 +47,25 @@
 
 &lcdif {
 	status = "okay";
-	/* important to overwrite max-res otherwise DRM lcdif will fail to find a suitable connector */
+	/* important to overwrite max-res otherwise DRM lcdif will fail to find
+	 * a suitable connector.
+	 */
 	max-res = <4096>, <4096>;
 };
 
 &mipi_dsi {
 	status = "okay";
-	pref-rate = <27000>;
-	clocks = <&clk IMX8MM_CLK_DSI_CORE>,
-			 <&clk IMX8MM_CLK_DSI_PHY_REF>;
-	clock-names = "cfg", "pll-ref";
-	assigned-clocks = <&clk IMX8MM_CLK_DSI_CORE>,
-				  <&clk IMX8MM_CLK_DSI_PHY_REF>;
-	assigned-clock-parents = <&clk IMX8MM_SYS_PLL1_266M>,
-					 <&clk IMX8MM_VIDEO_PLL1_OUT>;
-	assigned-clock-rates = <266000000>, <27000000>;
 
-	panel@0 {
-		reg = <0>;
-		compatible = "fs,j070wvtc0211-dsi"; /* one of panel-simple's
-			 		          match strings */
+	bus-fmt = <0x100a>;
 
-		power-supply = <&reg_vlcd_adp>;
-
-		dsi,flags = <0xB>; /* MIPI_DSI_MODE_VIDEO MIPI_DSI_MODE_VIDEO_BURST MIPI_DSI_MODE_VIDEO_AUTO_VERT */
-		dsi,format = <0x0>; /* MIPI_DSI_FMT_RGB888 */
-		dsi,lanes = <4>;
-
-		bus-flags = <0x45>;
-		refresh-rate = <60>;
-		rotate = <0>;
-		bus-format = <0x100a>;
-
-		panel-width-mm = <154>;
-		panel-height-mm = <85>;
-
-		display-timings {
-			native-mode = <&timing0>;
-
-			timing0: jd_j070wvtc0211 {
-				clock-frequency = <33260000>;
-				hactive = <800>;
-				vactive = <480>;
-				hback-porch = <216>;
-				hfront-porch = <10>;
-				hsync-len = <28>;
-				vback-porch = <35>;
-				vfront-porch = <8>;
-				vsync-len = <2>;
-			};
-		};
-
-		port {
-			panel1_in: endpoint {
-				remote-endpoint = <&lt9211_out>;
-			};
+	port@1 {
+		reg = <1>;
+		dsim_to_rgb: endpoint {
+			remote-endpoint = <&rgb_from_dsim>;
+			data-lanes = <0 1 2 3>;
+			attach-bridge;
 		};
 	};
-
-    port@2{
-    	dsim_to_lt9211: endpoint {
-        	remote-endpoint = <&lt9211_in>;
-    	};
-    };
-
 };
 
 &i2c2 {
@@ -115,23 +73,42 @@
 	rgb-bridge@2d {
 		#address-cells = <1>;
 		#size-cells = <0>;
-      	compatible = "lontium,lt9211";
-        reg = <0x2d>;
-        reset-gpios = <&pca963x 3 GPIO_ACTIVE_HIGH>;
-        vdd-supply = <&reg_vref_1v8>;
-        vcc-supply = <&reg_vref_3v3>;
+	      	compatible = "lontium,lt9211";
+//		lt,debug-pattern;
+		/* 0 = LVDS, 1 = MIPI, 2 = TTL */
+		rx-source = /bits/ 8 <1>;
+		/* optional: normally taken from simple panel display but can be
+		 * overwritten by bus-fmt flag: 6 = RGB666, 8 = RGB888
+		 */
+		bus-fmt = /bits/ 8 <8>;
+		/* PCLK will inverted because dotclock polarity from sec_mipi_dsim-imx
+		 * is set to neg edge. The display needs dotclock pos edge therefore
+		 * we inverte dotclock polarity.
+		 */
+		pclk-invert;
+		reg = <0x2d>;
+		reset-gpios = <&pca963x 3 GPIO_ACTIVE_HIGH>;
+		vdd-supply = <&reg_vref_1v8>;
+		vcc-supply = <&reg_vref_3v3>;
 
-		port@1 {
-			reg = <1>;
-			lt9211_in: endpoint {
-				remote-endpoint = <&dsim_to_lt9211>;
+		ports {
+			#address-cells = <1>;
+			#size-cells = <0>;
+
+			port@0 {
+				reg = <0>;
+
+				rgb_from_dsim: endpoint {
+					remote-endpoint = <&dsim_to_rgb>;
+				};
 			};
-		};
 
-		port@2 {
-			reg = <2>;
-			lt9211_out: endpoint {
-				remote-endpoint = <&panel1_in>;
+			port@1 {
+				reg = <1>;
+
+				rgb_to_panel: endpoint {
+					remote-endpoint = <&panel_from_rgb>;
+				};
 			};
 		};
     };
@@ -148,14 +125,12 @@
 				reg = <0>;
 				label = "BL_ON";
 				type = "GPIO";
-				default-on;		/* or: keep-value */
 				active-high;
 			};
 			led@1 {
 				reg = <1>;
 				label = "BL_PWM";
 				type = "PWM";
-				default-on;		/* or: keep-value */
 				active-low;
 			};
 			led@2 {
@@ -173,10 +148,9 @@
 			};
 			led@4 {
 				reg = <4>;
-				label = "VLCD_ON";
-				type = "GPIO";
-				default-on;		/* or: keep-value */
-				active-high;
+				label = "4-unused";
+				type = "LED";
+				active-low;
 			};
 			led@5 {
 				reg = <5>;
@@ -205,7 +179,6 @@
 		vio-supply = <&reg_vref_3v3>;
 		reset-gpios = <&pca963x 5 GPIO_ACTIVE_HIGH>;
 		interrupts-extended = <&gpio5 2 IRQ_TYPE_EDGE_FALLING>;
-
 		touchscreen-fuzz-x = <4>;
 		touchscreen-fuzz-y = <7>;
 		touchscreen-fuzz-pressure = <20>;
@@ -214,7 +187,7 @@
 		touchscreen-max-pressure = <2048>;
 		touchscreen-inverted-y;
 		ti,x-plate-ohms = <280>;
-		//ti,esd-recovery-timeout-ms = <8000>;
+		ti,pre-charge-time = <4>;
+		ti,sense-time-sel = <3>;
 	};
 };
-
