Add new devicetree picocoremx8mm-ddr3l-lcdif-g050tan01.dts
The devicetree exists picocoremx8mm-lpddr4-lcdif-g050tan01.dts so
convert it to picocoremx8mm-ddr3l-lcdif-g050tan01.dts.

--- a/arch/arm64/boot/dts/F+S/Makefile
+++ b/arch/arm64/boot/dts/F+S/Makefile
@@ -21,6 +21,7 @@ dtb-$(CONFIG_ARCH_MXC) += picocoremx8mm-lpddr4.dtb \
 			  picocoremx8mm-ddr3l.dtb \
 			  picocoremx8mm-ddr3l-lcdif-tc358775-g133han01.dtb \
 			  picocoremx8mm-ddr3l-lcdif-tc358775-j070wvtc0211.dtb \
+			  picocoremx8mm-ddr3l-lcdif-g050tan01.dtb \
 			  picocoremx8mm-ddr3l-lcdif-adp-mipi2lvds1-j070wvtc0211-single-display.dtb \
 			  picocoremx8mm-ddr3l-lcdif-adp-mipi2lvds1-g133han01.dtb \
 			  picocoremx8mm-ddr3l-lcdif-adp-mipi2mipi1-ee0350et-2cp.dtb \
