--- a/arch/arm64/boot/dts/F+S/Makefile
+++ b/arch/arm64/boot/dts/F+S/Makefile
@@ -40,7 +40,8 @@ dtb-$(CONFIG_ARCH_MXC) += picocoremx8mn-lpddr4.dtb \
 			  picocoremx8mn-ddr3l-lcdif-tc358775-g133han01.dtb \
 			  picocoremx8mn-ddr3l-lcdif-tc358775-j070wvtc0211.dtb \
 			  picocoremx8mn-ddr3l-lcdif-adp-mipi2lvds1-g133han01.dtb \
-			  picocoremx8mn-ddr3l-lcdif-adp-mipi2mipi1-ee0350et-2cp.dtb
+			  picocoremx8mn-ddr3l-lcdif-adp-mipi2mipi1-ee0350et-2cp.dtb \
+			  picocoremx8mn-ddr3l-lcdif-adp-mipi2rgb.dtb
 dtb-$(CONFIG_ARCH_MXC) += picocoremx8mp.dtb \
 			  picocoremx8mp-lcdif-adp-mipi2lvds1-j070wvtc0211-single-display.dtb \
 			  picocoremx8mp-lcdif-adp-mipi2mipi1-ee0350et-2cp.dtb \
