Add fsimx6sx/ul alias for gpmi/emmc/rpmsg
UBoot references the gpmi/emmc/rpmsg node by an absolute path. This may
lead to incompatibility between UBoot and Linux if the Linux device tree
path changes.

This can be avoided by referencing aliases in UBoot, which are less
likely to change and can be handled in F&S device trees.

--- a/arch/arm/boot/dts/bema9x.dts
+++ b/arch/arm/boot/dts/bema9x.dts
@@ -18,6 +18,9 @@
 	model = "F&S bemA9X";
 	compatible = "fus,imx6sx-bema9x", "fsl,imx6sx";
 
+ 	aliases {
+ 		nand = &gpmi;
+ 	};
 
 	backlight_lcd {
 		compatible = "pwm-backlight";
