--- a/arch/arm/boot/dts/cubea7ul.dts
+++ b/arch/arm/boot/dts/cubea7ul.dts
@@ -21,6 +21,10 @@
 	model = "F&S CubeA7UL";
 	compatible = "fsl,imx6ul-cubea7ul", "fsl,imx6ul";
 
+	aliases {
+		nand = &gpmi;
+	};
+
 #if 0
 	chosen {
 		stdout-path = &uart1;
