--- a/arch/arm64/boot/dts/F+S/tbs2.dts
+++ b/arch/arm64/boot/dts/F+S/tbs2.dts
@@ -9,7 +9,7 @@
 /dts-v1/;
 
 /* Set board revision as 3-digit number, e.g. 110 for board rev. 1.10 */
-#define CONFIG_TBS2_BOARD_REVISION	111
+#define CONFIG_TBS2_BOARD_REVISION	120
 
 /* MIPI DSI */
 #define CONFIG_TBS2_MIPI_DSI
@@ -106,7 +106,11 @@
 
 		led-blue {
 			label = "led-blue";
+#if (CONFIG_TBS2_BOARD_REVISION < 120)
 			gpios = <&gpio5 19 GPIO_ACTIVE_HIGH>;
+#else
+			gpios = <&gpio4 6 GPIO_ACTIVE_HIGH>;
+#endif
 		};
 
 		led-green {
@@ -116,7 +120,11 @@
 
 		led-red{
 			label = "led-red";
+#if (CONFIG_TBS2_BOARD_REVISION < 120)
 			gpios = <&gpio5 21 GPIO_ACTIVE_HIGH>;
+#else
+			gpios = <&gpio4 8 GPIO_ACTIVE_HIGH>;
+#endif
 		};
 
 		led-status{
@@ -431,6 +439,20 @@
 };
 #endif
 
+#if (CONFIG_TBS2_BOARD_REVISION >= 120)
+&pwm1 {
+	pinctrl-names = "default";
+	pinctrl-0 = <&pinctrl_pwm1>;
+	status = "okay";
+};
+
+&pwm3 {
+	pinctrl-names = "default";
+	pinctrl-0 = <&pinctrl_pwm3>;
+	status = "okay";
+};
+#endif
+
 #ifdef CONFIG_TBS2_PWM_BUZZER
 &pwm4 {
 	pinctrl-names = "default";
@@ -734,6 +756,20 @@
 		};
 #endif
 
+#if (CONFIG_TBS2_BOARD_REVISION >= 120)
+		pinctrl_pwm1: pwm1grp {
+			fsl,pins = <
+				MX8MM_IOMUXC_I2C4_SDA_PWM1_OUT			0x00104
+			>;
+		};
+
+		pinctrl_pwm3: pwm3grp {
+			fsl,pins = <
+				MX8MM_IOMUXC_I2C3_SDA_PWM3_OUT			0x00104
+			>;
+		};
+#endif
+
 #ifdef CONFIG_TBS2_PWM_BUZZER
 		pinctrl_pwm4: pwm4grp {
 			fsl,pins = <
@@ -744,12 +780,19 @@
 
 		pinctrl_leds: ledsgrp {
 			fsl,pins = <
+#if (CONFIG_TBS2_BOARD_REVISION < 120)
 				/* LEDBLUE */
 				MX8MM_IOMUXC_I2C3_SDA_GPIO5_IO19		0x00104
-				/* LEDGREEN */
-				MX8MM_IOMUXC_I2C4_SCL_GPIO5_IO20		0x00104
 				/* LEDRED */
 				MX8MM_IOMUXC_I2C4_SDA_GPIO5_IO21		0x00104
+#else
+				/* LEDBLUE */
+				MX8MM_IOMUXC_SAI1_RXD4_GPIO4_IO6		0x00104
+				/* LEDRED */
+				MX8MM_IOMUXC_SAI1_RXD6_GPIO4_IO8		0x00104
+#endif
+				/* LEDGREEN */
+				MX8MM_IOMUXC_I2C4_SCL_GPIO5_IO20		0x00104
 				/* LEDSTATUS_GPIO */
 				MX8MM_IOMUXC_SAI3_MCLK_GPIO5_IO2		0x00104
 				/* LEDBLUE_TEST */
